    + L'affichage de la fenêtre des programmes journaliers n'apparaît pas dans le calendrier si aucun programme journalier n'a été défini
    + Il est impossible de choisir la méthode de calcul des options avançées de régulation si un seul capteur est sélectionné"
    + Correction de la vérification des mots de passe de la partie WIFI

-- Yann Genevois <yann.genevois@cultibox.fr> Sun July 20  13:39:17 CEST 2014


Cultibox (1.4.03) precise; urgency=low
    + Multiples debug

-- Yann Genevois <yann.genevois@cultibox.fr> Tue July 17  10:29:58 CEST 2014


Cultibox (1.4.02) precise; urgency=low
    + Correction de l'affichage et la gestion des programmes journaliers dans l'onglet programme
    + Correction de la déselection des courbes dans l'onglet logs
    + Affichage des informations de régulation secondaire dans le résumé de l'onglet programme

-- Yann Genevois <yann.genevois@cultibox.fr> Tue July 10  11:25:32 CEST 2014


Cultibox (1.4.01) precise; urgency=low
    + Déplacement du site distant pour les mises à jour de cultibox.highproshop.fr vers cultibox.fr
    + L'option des programmes journaliers est toujours activée
    + Nettoyage du champ SHOW_HISTORIC qui n'est plus nécéssaire
    + Correction de la taille minimale de la fenêtre du logiciel
    + Passage en ajax pour l'enregistrement de la configuration
    + La carte SD n'est vérifiée qu'une seule fois par branchement et pas à chaque page
    + Sauvegarde de la configuration des capteurs, des programmes et des prises selectionnés lors d'un changement de jour par les boutons suivant et précédent
    + Suppression des faux logs après le premier chargement de logs

-- Yann Genevois <yann.genevois@cultibox.fr> Sun July 6 12:13:49 CEST 2014


Cultibox (1.3.09) precise; urgency=low
    + Remise en forme de l'interface    

-- Yann Genevois <yann.genevois@cultibox.fr> Tue Jun 10 11:25:32 CEST 2014


Cultibox (1.3.08) precise; urgency=low